--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "stripe": "^8.209.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.5",
     "@babel/preset-react": "^7.18.6",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6"
